Update GameController + Fixes